refactor structure to make it clear the separation and the dependency between components